--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "mtime",
+  "name": "router",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.6.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.1.0"
+    "react-redux": "^5.1.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.0.5",
+    "react-swipe": "^5.1.1",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,5 +28,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "node-sass": "^4.9.4",
+    "sass-loader": "^7.1.0"
+  }
 }
