--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd-mobile": "^2.2.6",
     "axios": "^0.18.0",
     "react": "^16.6.0",
     "react-addons-css-transition-group": "^15.6.2",
@@ -32,5 +33,7 @@
   "devDependencies": {
     "node-sass": "^4.9.4",
     "sass-loader": "^7.1.0"
-  }
+  },
+  "proxy": "https://m.mtime.cn"
+  
 }
